# torchattack

./: .gitignore  .pdm.toml  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml  pages.yml  pypi-publish.yml
docs/: development.md  index.md  populate_attack_apis.py  usage.md
docs/api/: attack-model.md  base-attack.md  create-attack.md  index.md  register-attack.md
docs/api/eval/: eval-dataset.md  eval-metric.md  eval-runner.md  eval-save-image.md  index.md
docs/api/evaluate/: eval-dataset.md  eval-metric.md  eval-runner.md  eval-save-image.md  index.md
docs/attacks/: fgsm.md  index.md  mifgsm.md
docs/stylesheets/: extra.css
docs/usage/: api-reference.md  attack-creation.md  attack-evaluation.md  attack-model.md  index.md  putting-it-all-together.md  runner.md
examples/: mifgsm_transfer.py
src/torchattack/: __init__.py  admix.py  base.py  dataset.py  decowa.py  deepfool.py  difgsm.py  eval.py  fgsm.py  fia.py  geoda.py  mifgsm.py  nifgsm.py  pgd.py  pgdl2.py  pna_patchout.py  runner.py  sinifgsm.py  ssa.py  ssp.py  tgr.py  tifgsm.py  utils.py  vdc.py  vmifgsm.py  vnifgsm.py
tests/: conftest.py  test_attack_model.py  test_attacks.py  test_create_attack.py  test_eval_metric.py  test_eval_save_image.py  test_external_attack_register.py  test_metric.py
torchattack/: __init__.py  _attack.py  _rgetattr.py  admix.py  att.py  attack.py  attack_model.py  base.py  bfa.py  bia.py  bpa.py  bsr.py  cda.py  create_attack.py  danaa.py  dataset.py  decowa.py  deepfool.py  difgsm.py  dr.py  eval.py  fda.py  fgsm.py  fia.py  gama.py  geoda.py  gra.py  ilpd.py  l2t.py  ltp.py  mifgsm.py  mig.py  mumodig.py  naa.py  nifgsm.py  pgd.py  pgdl2.py  pna_patchout.py  sgm.py  sinifgsm.py  (+8 more)
torchattack/eval/: __init__.py  dataset.py  metric.py  runner.py  save_image.py
torchattack/evaluate/: __init__.py  dataset.py  meter.py  metric.py  runner.py
torchattack/generative/: _inference.py  _weights.py  leaky_relu_resnet_generator.py  resnet_generator.py
torchattacks/: __init__.py  base.py  dataset.py  fgsm.py  pgd.py  utils.py
